--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="infocontainer">
             <div class="devInfo">
                 <div class="hello"> Hi  i am </div>
-                <div class="name">  Amit Prasad</div>
+                <div class="name"> Venkat Kalla</div>
                 <div class="about"> Passionate Developer,  <br>Transforming Idea into Exceptional Software Solution</div> 
                 <div class="button">
                     <a href="resume.amit_p.pdf"Download><target="_blank"><button>Download CV </button></a>
