--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div> 
             </div>
             <div class="devPic">
-                <img src="pommu.png.png" alt="Venkat Kalla">
+                <img src="pommu.png" alt="Venkat Kalla">
                 </div>
                 <div class="venkatshape">
                 <img src="back.png" alt="Background">
